Style team page, fix misaligned logo on homepage

--- a/pyconcz_2016/static/scss/_homepage.scss
+++ b/pyconcz_2016/static/scss/_homepage.scss
@@ -9,7 +9,7 @@
 
   .logo-lg {
     display: block;
-    width: 640px;
+    width: 590px;
     height: 340px;
     background-image: url("/2016/static/img/pyconlogo.svg");
     background-repeat: no-repeat;
